// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TaskBar /> > Snapshots > <Clock /> > should match snapshot 1`] = `
<div>
  <div
    class="Frame_paddingLeft__iuzg8937 Frame_paddingRight__iuzg8939 Frame_paddingTop__iuzg893b Frame_paddingBottom__iuzg892z Frame_boxShadow__iuzg895z Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_alignItems__iuzg891n"
    style="--paddingLeft__iuzg8936: var(--r95-space-6); --paddingRight__iuzg8938: var(--r95-space-6); --paddingTop__iuzg893a: var(--r95-space-2); --paddingBottom__iuzg892y: var(--r95-space-2); --boxShadow__iuzg895y: var(--r95-shadow-in); --display__iuzg890: flex; --justifyContent__iuzg891e: center; --alignItems__iuzg891m: center;"
  >
    <div
      class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
    >
      10:00
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_false__1ct83mo4"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with active prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_true__1ct83mo5 TaskBar_windowsButton_small_true__1ct83mo3 TaskBar_windowsButton_compound_0__1ct83mo7"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with icon prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_false__1ct83mo4"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    >
      <svg test-file-stub />
    </div>
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > <WindowButton /> > should match snapshot with small prop 1`] = `
<div>
  <button
    class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
  >
    <div
      class="TaskBar_icon__1ct83mo9"
    />
  </button>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot 1`] = `
<div>
  <div
    class="Frame_height__iuzg891z Frame_width__iuzg891t Frame_position__iuzg893d Frame_bottom__iuzg893j Frame_left__iuzg893l Frame_right__iuzg893h Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_padding__iuzg892r Frame_zIndex__iuzg897d Frame_backgroundColor__iuzg893p Frame_boxShadow__iuzg895z"
    style="--height__iuzg891y: 28px; --width__iuzg891s: 100%; --position__iuzg893c: fixed; --bottom__iuzg893i: 0px; --left__iuzg893k: 0px; --right__iuzg893g: 0px; --display__iuzg890: flex; --justifyContent__iuzg891e: space-between; --padding__iuzg892q: var(--r95-space-2); --zIndex__iuzg897c: var(--r95-zIndex-taskbar); --backgroundColor__iuzg893o: var(--r95-color-material); --boxShadow__iuzg895y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width__iuzg891t Frame_marginLeft__iuzg892l Frame_paddingLeft__iuzg8937 Frame_display__iuzg891"
      style="--width__iuzg891s: 100%; --marginLeft__iuzg892k: var(--r95-space-2); --paddingLeft__iuzg8936: var(--r95-space-0); --display__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft__iuzg8937 Frame_paddingRight__iuzg8939 Frame_paddingTop__iuzg893b Frame_paddingBottom__iuzg892z Frame_boxShadow__iuzg895z Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_alignItems__iuzg891n"
      style="--paddingLeft__iuzg8936: var(--r95-space-6); --paddingRight__iuzg8938: var(--r95-space-6); --paddingTop__iuzg893a: var(--r95-space-2); --paddingBottom__iuzg892y: var(--r95-space-2); --boxShadow__iuzg895y: var(--r95-shadow-in); --display__iuzg890: flex; --justifyContent__iuzg891e: center; --alignItems__iuzg891m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 1`] = `
<div>
  <div
    class="Frame_height__iuzg891z Frame_width__iuzg891t Frame_position__iuzg893d Frame_bottom__iuzg893j Frame_left__iuzg893l Frame_right__iuzg893h Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_padding__iuzg892r Frame_zIndex__iuzg897d Frame_backgroundColor__iuzg893p Frame_boxShadow__iuzg895z"
    style="--height__iuzg891y: 28px; --width__iuzg891s: 100%; --position__iuzg893c: fixed; --bottom__iuzg893i: 0px; --left__iuzg893k: 0px; --right__iuzg893g: 0px; --display__iuzg890: flex; --justifyContent__iuzg891e: space-between; --padding__iuzg892q: var(--r95-space-2); --zIndex__iuzg897c: var(--r95-zIndex-taskbar); --backgroundColor__iuzg893o: var(--r95-color-material); --boxShadow__iuzg895y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width__iuzg891t Frame_marginLeft__iuzg892l Frame_paddingLeft__iuzg8937 Frame_display__iuzg891"
      style="--width__iuzg891s: 100%; --marginLeft__iuzg892k: var(--r95-space-2); --paddingLeft__iuzg8936: var(--r95-space-0); --display__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft__iuzg8937 Frame_paddingRight__iuzg8939 Frame_paddingTop__iuzg893b Frame_paddingBottom__iuzg892z Frame_boxShadow__iuzg895z Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_alignItems__iuzg891n"
      style="--paddingLeft__iuzg8936: var(--r95-space-6); --paddingRight__iuzg8938: var(--r95-space-6); --paddingTop__iuzg893a: var(--r95-space-2); --paddingBottom__iuzg892y: var(--r95-space-2); --boxShadow__iuzg895y: var(--r95-shadow-in); --display__iuzg890: flex; --justifyContent__iuzg891e: center; --alignItems__iuzg891m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with list prop 2`] = `
<div>
  <div
    class="Frame_height__iuzg891z Frame_width__iuzg891t Frame_position__iuzg893d Frame_bottom__iuzg893j Frame_left__iuzg893l Frame_right__iuzg893h Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_padding__iuzg892r Frame_zIndex__iuzg897d Frame_backgroundColor__iuzg893p Frame_boxShadow__iuzg895z"
    style="--height__iuzg891y: 28px; --width__iuzg891s: 100%; --position__iuzg893c: fixed; --bottom__iuzg893i: 0px; --left__iuzg893k: 0px; --right__iuzg893g: 0px; --display__iuzg890: flex; --justifyContent__iuzg891e: space-between; --padding__iuzg892q: var(--r95-space-2); --zIndex__iuzg897c: var(--r95-zIndex-taskbar); --backgroundColor__iuzg893o: var(--r95-color-material); --boxShadow__iuzg895y: var(--r95-shadow-out);"
  >
    <div
      class="Frame_position__iuzg893d Frame_bottom__iuzg893j"
      style="--position__iuzg893c: absolute; --bottom__iuzg893i: 28px;"
    >
      <ul
        class="List_list__1lxkvz42"
      >
        <li
          class="List_listItem__1lxkvz40"
        >
          <svg test-file-stub />
          Local Disk (C:)
        </li>
        <li
          class="List_listItem__1lxkvz40"
        >
          <svg test-file-stub />
          Windows Explorer
        </li>
      </ul>
    </div>
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_true__1ct83mo5 TaskBar_windowsButton_small_true__1ct83mo3 TaskBar_windowsButton_compound_0__1ct83mo7"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width__iuzg891t Frame_marginLeft__iuzg892l Frame_paddingLeft__iuzg8937 Frame_display__iuzg891"
      style="--width__iuzg891s: 100%; --marginLeft__iuzg892k: var(--r95-space-2); --paddingLeft__iuzg8936: var(--r95-space-0); --display__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft__iuzg8937 Frame_paddingRight__iuzg8939 Frame_paddingTop__iuzg893b Frame_paddingBottom__iuzg892z Frame_boxShadow__iuzg895z Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_alignItems__iuzg891n"
      style="--paddingLeft__iuzg8936: var(--r95-space-6); --paddingRight__iuzg8938: var(--r95-space-6); --paddingTop__iuzg893a: var(--r95-space-2); --paddingBottom__iuzg892y: var(--r95-space-2); --boxShadow__iuzg895y: var(--r95-shadow-in); --display__iuzg890: flex; --justifyContent__iuzg891e: center; --alignItems__iuzg891m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with one Modal 1`] = `
<div>
  <div
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    />
  </div>
  <div
    class="Frame_height__iuzg891z Frame_width__iuzg891t Frame_position__iuzg893d Frame_bottom__iuzg893j Frame_left__iuzg893l Frame_right__iuzg893h Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_padding__iuzg892r Frame_zIndex__iuzg897d Frame_backgroundColor__iuzg893p Frame_boxShadow__iuzg895z"
    style="--height__iuzg891y: 28px; --width__iuzg891s: 100%; --position__iuzg893c: fixed; --bottom__iuzg893i: 0px; --left__iuzg893k: 0px; --right__iuzg893g: 0px; --display__iuzg890: flex; --justifyContent__iuzg891e: space-between; --padding__iuzg892q: var(--r95-space-2); --zIndex__iuzg897c: var(--r95-zIndex-taskbar); --backgroundColor__iuzg893o: var(--r95-color-material); --boxShadow__iuzg895y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width__iuzg891t Frame_marginLeft__iuzg892l Frame_paddingLeft__iuzg8937 Frame_display__iuzg891"
      style="--width__iuzg891s: 100%; --marginLeft__iuzg892k: var(--r95-space-2); --paddingLeft__iuzg8936: var(--r95-space-0); --display__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft__iuzg8937 Frame_paddingRight__iuzg8939 Frame_paddingTop__iuzg893b Frame_paddingBottom__iuzg892z Frame_boxShadow__iuzg895z Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_alignItems__iuzg891n"
      style="--paddingLeft__iuzg8936: var(--r95-space-6); --paddingRight__iuzg8938: var(--r95-space-6); --paddingTop__iuzg893a: var(--r95-space-2); --paddingBottom__iuzg892y: var(--r95-space-2); --boxShadow__iuzg895y: var(--r95-shadow-in); --display__iuzg890: flex; --justifyContent__iuzg891e: center; --alignItems__iuzg891m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;

exports[`<TaskBar /> > Snapshots > should match snapshot with two Modals 1`] = `
<div>
  <div
    class="Modal_modalWrapper__1txblt60 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_false__1kpzw684 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        Windows Explorer
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    />
  </div>
  <div
    class="Modal_modalWrapper__1txblt60 Modal_modalWrapper_active_true__1txblt61 react-draggable"
    style="transform: translate(0px,0px);"
  >
    <div
      class="TitleBar_titleBarBackground__1kpzw682 TitleBar_titleBarBackground_active_true__1kpzw683 draggable"
    >
      <svg test-file-stub />
      <div
        class="TitleBar_title__1kpzw685"
      >
        file.bat
      </div>
      <div
        class="TitleBar_optionsBox__1kpzw680"
      >
        <button
          class="Button_button__1bzq74l0 TitleBar_option__1kpzw681"
        >
          <img
            alt="close"
            src="test-file-stub"
          />
        </button>
      </div>
    </div>
    <div
      class="Modal_content__1txblt63"
    />
  </div>
  <div
    class="Frame_height__iuzg891z Frame_width__iuzg891t Frame_position__iuzg893d Frame_bottom__iuzg893j Frame_left__iuzg893l Frame_right__iuzg893h Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_padding__iuzg892r Frame_zIndex__iuzg897d Frame_backgroundColor__iuzg893p Frame_boxShadow__iuzg895z"
    style="--height__iuzg891y: 28px; --width__iuzg891s: 100%; --position__iuzg893c: fixed; --bottom__iuzg893i: 0px; --left__iuzg893k: 0px; --right__iuzg893g: 0px; --display__iuzg890: flex; --justifyContent__iuzg891e: space-between; --padding__iuzg892q: var(--r95-space-2); --zIndex__iuzg897c: var(--r95-zIndex-taskbar); --backgroundColor__iuzg893o: var(--r95-color-material); --boxShadow__iuzg895y: var(--r95-shadow-out);"
  >
    <button
      class="TaskBar_windowsButton__1ct83mo2 TaskBar_windowsButton_active_false__1ct83mo6 TaskBar_windowsButton_small_true__1ct83mo3"
    >
      <div
        class="TaskBar_icon__1ct83mo9"
      >
        <svg test-file-stub
          variant="32x32_4"
        />
      </div>
      Start
    </button>
    <div
      class="Frame_width__iuzg891t Frame_marginLeft__iuzg892l Frame_paddingLeft__iuzg8937 Frame_display__iuzg891"
      style="--width__iuzg891s: 100%; --marginLeft__iuzg892k: var(--r95-space-2); --paddingLeft__iuzg8936: var(--r95-space-0); --display__iuzg890: flex;"
    />
    <div
      class="Frame_paddingLeft__iuzg8937 Frame_paddingRight__iuzg8939 Frame_paddingTop__iuzg893b Frame_paddingBottom__iuzg892z Frame_boxShadow__iuzg895z Frame_display__iuzg891 Frame_justifyContent__iuzg891f Frame_alignItems__iuzg891n"
      style="--paddingLeft__iuzg8936: var(--r95-space-6); --paddingRight__iuzg8938: var(--r95-space-6); --paddingTop__iuzg893a: var(--r95-space-2); --paddingBottom__iuzg892y: var(--r95-space-2); --boxShadow__iuzg895y: var(--r95-shadow-in); --display__iuzg890: flex; --justifyContent__iuzg891e: center; --alignItems__iuzg891m: center;"
    >
      <div
        class="Tooltip_wrapper__f5whxn1 TaskBar_tooltip__1ct83mo1"
      >
        10:00
      </div>
    </div>
  </div>
</div>
`;
